{
    "name": "PlayerMovement",
    "maps": [
        {
            "name": "PlayerOnGround",
            "id": "e31f11b6-2c0b-4fb3-b194-175d2a3f08c1",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "a537e66a-c079-4af1-a4e5-170938b115a6",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "743d3890-5797-4564-a405-35eb1d181566",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}